--- a/css/styles.css
+++ b/css/styles.css
@@ -67,7 +67,7 @@ abbr {
 .logo {
     width: 179px;
     height: 80px;
-    background-image: url('/imgs/logo.png');
+    background-image: url('../imgs/logo.png');
     background-size: contain;
     background-repeat: no-repeat;
     background-position: left center;
@@ -103,6 +103,7 @@ img {
     border-radius: 15px;
     transition: transform 0.3s;
     display: block;
+    margin: 0 auto;
 }
 
 .inicio-container {
@@ -137,7 +138,7 @@ img {
     display: inline-block;
     width: 50px;
     height: 50px;
-    background-image: url('/imgs/icons/css_sprites.png');
+    background-image: url('../imgs/icons/css_sprites.png');
     background-repeat: no-repeat;
     margin-right: 10px;
     vertical-align: middle;
