--- a/css/styles.css
+++ b/css/styles.css
@@ -445,6 +445,7 @@ footer ul li{
         align-items: center;
         width: 100%;
         padding: 10px;
+        margin: 0;
     }
     
     #navegacion li {
