--- a/css/styles.css
+++ b/css/styles.css
@@ -116,48 +116,21 @@ img {
     text-align: center;
 }
 
-/* Sprites de CSS */
-.icon-list {
+/* Lista*/
+
+.lista {
     width: 100%;
     margin-top: 10px;
-    display: inline-block;
     list-style-type: none;
     padding: 0;
 }
 
-.icon-list li {
-    margin: 0 20px;
-    display: inline-block;
+.lista li {
+    margin: 10px;
 }
 
-.icon-list span {
-    font-size: 0px;
-}
-
-.icon {
-    display: inline-block;
-    width: 50px;
-    height: 50px;
-    background-image: url('../imgs/icons/css_sprites.png');
-    background-repeat: no-repeat;
-    margin-right: 10px;
-    vertical-align: middle;
-}
-
-.icon1 {
-    background-position: -10px -10px;
-}
-
-.icon2 {
-    background-position: -80px -10px;
-}
-
-.icon3 {
-    background-position: -150px -10px;
-}
-
-.icon4 {
-    background-position: -220px -10px;
+.lista span {
+    font-weight: bold;
 }
 
 /* Estilos de sección */
@@ -166,7 +139,7 @@ img {
 main {
     width: 90%;
     background-color: rgba(39, 28, 25, 0.95);
-    margin: auto;
+    margin: 0px auto;
     padding: 20px;
     box-shadow: -1px 5px 19px 6px rgba(0,0,0,0.51);
     -webkit-box-shadow: -1px 5px 19px 6px rgba(0,0,0,0.51);
